Tested custom markdown tags + small content changes

--- a/content/The Unforgettable App.mdx
+++ b/content/The Unforgettable App.mdx
@@ -4,6 +4,8 @@ metaTitle: "The Unforgettable App"
 metaDescription: "Build something you won't forget with ASP .NET (core)"
 ---
 
+<b link="https://www.youtube.com/embed/bgmk4W9FDV0"></b>
+
 # Build something you won't forget with ASP .NET (core)
 
 #### Watch the catch phrase that almost rhymes
